# puffinn

./: .gitignore  .travis.yml  ARCHITECTURE.md  CMakeLists.txt  Justfile  LICENSE  README.md  flake.nix  main.cpp  notes.md  setup.py
.github/workflows/: ci.yml
bench/: README.md  alternatives.hpp  bench.cpp  sorthash_bench.cpp
cmake/: FindSphinx.cmake
data/glove/: sample100d.txt
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  conf.py  index.rst
examples/: closest-pairs.py  glove-join.cpp  glove.cpp  random-vectors.py  random.py
include/: puffinn.hpp  sorthash.hpp
include/puffinn/: collection.hpp  dataset.hpp  filterer.hpp  kmeans.hpp  math.hpp  maxbuffer.hpp  maxbuffercollection.hpp  maxpairbuffer.hpp  performance.hpp  pq_filter.hpp  prefixmap.hpp  sorthash.hpp  typedefs.hpp
include/puffinn/clustering/: kmeans.hpp
include/puffinn/format/: generic.hpp  interface.txt  real_vector.hpp  set.hpp  unit_vector.hpp
include/puffinn/hash/: crosspolytope.hpp  interface.txt  minhash.hpp  simhash.hpp
include/puffinn/hash_source/: deserialize.hpp  hash_source.hpp  independent.hpp  pool.hpp  tensor.hpp
include/puffinn/similarity_measure/: cosine.hpp  interface.txt  jaccard.hpp  l2.hpp
join-experiments/: README.md  StoreJaccard.cpp  XiaoEtAl.cpp  compute-stats.py  datasets.py  dblp.py  glove-join.cpp  lsb_tree.cpp  measures.py  plot.py  protocol.hpp  puffinn-join.cpp  run.py
join-experiments/scripts/: createraw.py  orkut.py
python/wrapper/: python_wrapper.cpp
scripts/: minibench.py
test/: code.cpp  main.cpp
test/include/: collection_test.hpp  dataset_test.hpp  filterer_test.hpp  format_test.hpp  hash_source_test.hpp  hash_test.hpp  kmeans_test.hpp  math_test.hpp  maxbuffer_test.hpp  maxbuffercollection_test.hpp  pq_filter_test.hpp  prefixmap_test.hpp  similarity_measure_test.hpp  sorthash_test.hpp
